# AI

Linkedin_agent/: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
Linkedin_agent/Agent/: agent.py  nodes.py  prompts.py  tools.py
Linkedin_agent/services/: linkedin_api.py
